--- a/swagger/ALBServicesConfig.json
+++ b/swagger/ALBServicesConfig.json
@@ -601,6 +601,10 @@
                     "description": "The FQDN or IP address of the customer portal. Field introduced in 18.2.6.",
                     "type": "string"
                 },
+                "saas_licensing_config": {
+                    "description": "Saas licensing configuration. Field introduced in 21.1.3. Allowed in Basic edition, Essentials edition, Enterprise edition.",
+                    "$ref": "#/definitions/SaasLicensingInfo"
+                },
                 "split_proxy_configuration": {
                     "description": "Split proxy configuration to connect external pulse services. Field introduced in 20.1.1.",
                     "$ref": "#/definitions/ProxyConfiguration"
@@ -611,7 +615,7 @@
                     "type": "string"
                 },
                 "use_split_proxy": {
-                    "description": "By default, use system proxy configuration.If true, use split proxy configuration. Field introduced in 20.1.1.",
+                    "description": "By default, pulse uses proxy added in system configuration. If pulse needs to use a seperate proxy, set this flag to true and configure split proxy configuration. Field introduced in 20.1.1.",
                     "type": "boolean"
                 },
                 "use_tls": {
@@ -700,7 +704,7 @@
                     "format": "int32"
                 },
                 "category": {
-                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3.",
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
                     "type": "string",
                     "default": "ALB_THREAT_INTELLIGENCE_CATEGORY"
                 }
@@ -710,7 +714,7 @@
             "type": "object",
             "properties": {
                 "category": {
-                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3.",
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
                     "type": "string",
                     "default": "ALB_SUPPORT_CATEGORY"
                 },
@@ -744,7 +748,7 @@
             "type": "object",
             "properties": {
                 "category": {
-                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3.",
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
                     "type": "string",
                     "default": "ALB_THREAT_INTELLIGENCE_CATEGORY"
                 },
@@ -782,6 +786,10 @@
                     "description": "Enable to receive WAF CRS updates. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True.",
                     "type": "boolean",
                     "default": true
+                },
+                "enable_saas_licensing": {
+                    "description": "Enable saas licensing. Field introduced in 21.1.3. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition.",
+                    "type": "boolean"
                 },
                 "enable_user_agent_db_sync": {
                     "description": "Enable to receive Bot Management updates. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition.",
@@ -834,6 +842,27 @@
                 }
             }
         },
+        "SaasLicensingInfo": {
+            "type": "object",
+            "properties": {
+                "cache_service_units": {
+                    "description": "Minimum service units that always remain checked out on controller. Field introduced in 21.1.3.",
+                    "type": "number",
+                    "format": "double"
+                },
+                "category": {
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
+                    "type": "string",
+                    "default": "ALB_LICENSE_CATEGORY"
+                },
+                "max_service_units": {
+                    "description": "Maximum service units that controller can check out. Field introduced in 21.1.3.",
+                    "type": "number",
+                    "default": 1000.0,
+                    "format": "double"
+                }
+            }
+        },
         "UserAgentDBConfig": {
             "type": "object",
             "properties": {
@@ -844,7 +873,7 @@
                     "format": "int32"
                 },
                 "category": {
-                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3.",
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
                     "type": "string",
                     "default": "ALB_THREAT_INTELLIGENCE_CATEGORY"
                 }
@@ -854,7 +883,7 @@
             "type": "object",
             "properties": {
                 "category": {
-                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3.",
+                    "description": "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3.",
                     "type": "string",
                     "default": "ALB_THREAT_INTELLIGENCE_CATEGORY"
                 },
