--- a/swagger/ALBServicesConfig.yaml
+++ b/swagger/ALBServicesConfig.yaml
@@ -423,6 +423,9 @@ definitions:
             portal_url:
                 description: "The FQDN or IP address of the customer portal. Field introduced in 18.2.6."
                 type: string
+            saas_licensing_config:
+                description: "Saas licensing configuration. Field introduced in 21.1.3. Allowed in Basic edition, Essentials edition, Enterprise edition."
+                $ref: '#/definitions/SaasLicensingInfo'
             split_proxy_configuration:
                 description: "Split proxy configuration to connect external pulse services. Field introduced in 20.1.1."
                 $ref: '#/definitions/ProxyConfiguration'
@@ -431,7 +434,7 @@ definitions:
                 readOnly: True
                 type: string
             use_split_proxy:
-                description: "By default, use system proxy configuration.If true, use split proxy configuration. Field introduced in 20.1.1."
+                description: "By default, pulse uses proxy added in system configuration. If pulse needs to use a seperate proxy, set this flag to true and configure split proxy configuration. Field introduced in 20.1.1."
                 type: boolean
             use_tls:
                 description: "Secure the controller to PULSE communication over TLS. Field introduced in 20.1.3. Allowed in Basic edition, Enterprise edition."
@@ -495,14 +498,14 @@ definitions:
                 default: 1440
                 format: int32
             category:
-                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3."
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
                 type: string
                 default: "ALB_THREAT_INTELLIGENCE_CATEGORY"
     CaseConfig:
         type: object
         properties:
             category:
-                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3."
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
                 type: string
                 default: "ALB_SUPPORT_CATEGORY"
             enable_auto_case_creation_on_controller_failure:
@@ -527,7 +530,7 @@ definitions:
         type: object
         properties:
             category:
-                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3."
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
                 type: string
                 default: "ALB_THREAT_INTELLIGENCE_CATEGORY"
             ip_reputation_file_object_expiry_duration:
@@ -557,6 +560,9 @@ definitions:
                 description: "Enable to receive WAF CRS updates. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition. Special default for Basic edition is false, Essentials edition is false, Enterprise is True."
                 type: boolean
                 default: True
+            enable_saas_licensing:
+                description: "Enable saas licensing. Field introduced in 21.1.3. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
+                type: boolean
             enable_user_agent_db_sync:
                 description: "Enable to receive Bot Management updates. Field introduced in 21.1.1. Allowed in Basic(Allowed values- false) edition, Essentials(Allowed values- false) edition, Enterprise edition."
                 type: boolean
@@ -593,6 +599,22 @@ definitions:
             username:
                 description: "Username for proxy."
                 type: string
+    SaasLicensingInfo:
+        type: object
+        properties:
+            cache_service_units:
+                description: "Minimum service units that always remain checked out on controller. Field introduced in 21.1.3."
+                type: number
+                format: double
+            category:
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
+                type: string
+                default: "ALB_LICENSE_CATEGORY"
+            max_service_units:
+                description: "Maximum service units that controller can check out. Field introduced in 21.1.3."
+                type: number
+                default: 1000.0
+                format: double
     UserAgentDBConfig:
         type: object
         properties:
@@ -602,14 +624,14 @@ definitions:
                 default: 500
                 format: int32
             category:
-                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3."
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
                 type: string
                 default: "ALB_THREAT_INTELLIGENCE_CATEGORY"
     WafCrsConfig:
         type: object
         properties:
             category:
-                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY. Field introduced in 21.1.3."
+                description: "Service category. Enum options - ALB_THREAT_INTELLIGENCE_CATEGORY, ALB_SUPPORT_CATEGORY, ALB_LICENSE_CATEGORY. Field introduced in 21.1.3."
                 type: string
                 default: "ALB_THREAT_INTELLIGENCE_CATEGORY"
             enable_auto_download_waf_signatures:
