--- a/swagger/ApplicationPersistenceProfile.yaml
+++ b/swagger/ApplicationPersistenceProfile.yaml
@@ -522,6 +522,9 @@ definitions:
             http_only:
                 description: "Sets the HttpOnly attribute in the cookie. Setting this helps to prevent the client side scripts from accessing this cookie, if supported by browser. Field introduced in 21.1.1."
                 type: boolean
+            is_persistent_cookie:
+                description: "When True, the cookie used is a persistent cookie, i.e. the cookie shouldn't be used at the end of the timeout. By default, it is set to false, making the cookie a session cookie, which allows clients to use it even after the timeout, if the session is still open. Field introduced in 21.1.3."
+                type: boolean
             key:
                 description: "Placeholder for description of property key of obj type HttpCookiePersistenceProfile field type str  type object"
                 type: array
