--- a/swagger/BotMapping.yaml
+++ b/swagger/BotMapping.yaml
@@ -370,19 +370,6 @@ definitions:
                 description: "The match operation. Enum options - IS_IN, IS_NOT_IN. Field introduced in 21.1.1."
                 type: string
                 default: "IS_IN"
-    BotDetectionMatch:
-        type: object
-        required:
-            -   match_operation
-        properties:
-            classifications:
-                description: "Bot classification types. Field introduced in 21.1.1."
-                type: array
-                items:
-                    $ref: '#/definitions/BotClassification'
-            match_operation:
-                description: "Match criteria. Enum options - IS_IN, IS_NOT_IN. Field introduced in 21.1.1."
-                type: string
     BotMapping:
         type: object
         required:
@@ -430,31 +417,64 @@ definitions:
         required:
             -   classification
             -   index
+            -   match
         properties:
             class_matcher:
-                description: "How to match the BotClientClass. Field introduced in 21.1.1."
+                description: "How to match the BotClientClass. Field deprecated in 21.1.3. Field introduced in 21.1.1."
                 $ref: '#/definitions/BotClassMatcher'
             classification:
                 description: "The assigned classification for this client. Field introduced in 21.1.1."
                 $ref: '#/definitions/BotClassification'
             component_matcher:
-                description: "The component for which this mapping is used. Enum options - BOT_DECIDER_CONSOLIDATION, BOT_DECIDER_USER_AGENT, BOT_DECIDER_IP_REPUTATION, BOT_DECIDER_IP_NETWORK_LOCATION. Field introduced in 21.1.1."
+                description: "The component for which this mapping is used. Enum options - BOT_DECIDER_CONSOLIDATION, BOT_DECIDER_USER_AGENT, BOT_DECIDER_IP_REPUTATION, BOT_DECIDER_IP_NETWORK_LOCATION. Field deprecated in 21.1.3. Field introduced in 21.1.1."
                 type: string
-            condition:
-                description: "The conditions to match, combined by logical AND. Field introduced in 21.1.3."
-                $ref: '#/definitions/MatchTarget'
             identifier_matcher:
-                description: "The list of bot identifier names and how they're matched. Field introduced in 21.1.1."
+                description: "The list of bot identifier names and how they're matched. Field deprecated in 21.1.3. Field introduced in 21.1.1."
                 $ref: '#/definitions/StringMatch'
             index:
                 description: "Rules are processed in order of this index field. Field introduced in 21.1.1."
                 type: integer
                 format: int32
+            match:
+                description: "How to match the request  all the specified properties must be fulfilled. Field introduced in 21.1.3."
+                $ref: '#/definitions/BotMappingRuleMatchTarget'
             name:
                 description: "A name describing the rule in a short form. Field introduced in 21.1.1."
                 type: string
             type_matcher:
-                description: "How to match the BotClientType. Field introduced in 21.1.1."
+                description: "How to match the BotClientType. Field deprecated in 21.1.3. Field introduced in 21.1.1."
+                $ref: '#/definitions/BotTypeMatcher'
+    BotMappingRuleMatchTarget:
+        type: object
+        properties:
+            class_matcher:
+                description: "How to match the BotClientClass. Field introduced in 21.1.3."
+                $ref: '#/definitions/BotClassMatcher'
+            client_ip:
+                description: "Configure client ip addresses. Field introduced in 21.1.3."
+                $ref: '#/definitions/IpAddrMatch'
+            component_matcher:
+                description: "The component for which this mapping is used. Enum options - BOT_DECIDER_CONSOLIDATION, BOT_DECIDER_USER_AGENT, BOT_DECIDER_IP_REPUTATION, BOT_DECIDER_IP_NETWORK_LOCATION. Field introduced in 21.1.3."
+                type: string
+            hdrs:
+                description: "Configure HTTP header(s). Field introduced in 21.1.3."
+                type: array
+                items:
+                    $ref: '#/definitions/HdrMatch'
+            host_hdr:
+                description: "Configure the host header. Field introduced in 21.1.3."
+                $ref: '#/definitions/HostHdrMatch'
+            identifier_matcher:
+                description: "The list of bot identifier names and how they're matched. Field introduced in 21.1.3."
+                $ref: '#/definitions/StringMatch'
+            method:
+                description: "Configure HTTP methods. Field introduced in 21.1.3."
+                $ref: '#/definitions/MethodMatch'
+            path:
+                description: "Configure request paths. Field introduced in 21.1.3."
+                $ref: '#/definitions/PathMatch'
+            type_matcher:
+                description: "How to match the BotClientType. Field introduced in 21.1.3."
                 $ref: '#/definitions/BotTypeMatcher'
     BotTypeMatcher:
         type: object
@@ -468,43 +488,6 @@ definitions:
                 description: "The match operation. Enum options - IS_IN, IS_NOT_IN. Field introduced in 21.1.1."
                 type: string
                 default: "IS_IN"
-    CookieMatch:
-        type: object
-        required:
-            -   match_criteria
-            -   name
-        properties:
-            match_case:
-                description: "Case sensitivity to use for the match. Enum options - SENSITIVE, INSENSITIVE."
-                type: string
-                default: "INSENSITIVE"
-            match_criteria:
-                description: "Criterion to use for matching the cookie in the HTTP request. Enum options - HDR_EXISTS, HDR_DOES_NOT_EXIST, HDR_BEGINS_WITH, HDR_DOES_NOT_BEGIN_WITH, HDR_CONTAINS, HDR_DOES_NOT_CONTAIN, HDR_ENDS_WITH, HDR_DOES_NOT_END_WITH, HDR_EQUALS, HDR_DOES_NOT_EQUAL."
-                type: string
-            name:
-                description: "Name of the cookie."
-                type: string
-            value:
-                description: "String value in the cookie."
-                type: string
-    GeoMatch:
-        type: object
-        required:
-            -   attribute
-            -   match_operation
-            -   values
-        properties:
-            attribute:
-                description: "The Geo data type to match on. Enum options - ATTRIBUTE_IP_PREFIX, ATTRIBUTE_COUNTRY_CODE, ATTRIBUTE_COUNTRY_NAME, ATTRIBUTE_CONTINENT_CODE, ATTRIBUTE_CONTINENT_NAME, ATTRIBUTE_REGION_NAME, ATTRIBUTE_CITY_NAME, ATTRIBUTE_ISP_NAME, ATTRIBUTE_ORGANIZATION_NAME, ATTRIBUTE_AS_NUMBER, ATTRIBUTE_AS_NAME, ATTRIBUTE_LONGITUDE, ATTRIBUTE_LATITUDE, ATTRIBUTE_CUSTOM_1, ATTRIBUTE_CUSTOM_2, ATTRIBUTE_CUSTOM_3, ATTRIBUTE_CUSTOM_4, ATTRIBUTE_CUSTOM_5, ATTRIBUTE_CUSTOM_6, ATTRIBUTE_CUSTOM_7, ATTRIBUTE_CUSTOM_8, ATTRIBUTE_CUSTOM_9, ATTRIBUTE_USER_DEFINED_MAPPING. Field introduced in 21.1.1."
-                type: string
-            match_operation:
-                description: "Match criteria. Enum options - IS_IN, IS_NOT_IN. Field introduced in 21.1.1."
-                type: string
-            values:
-                description: "The values to match. Field introduced in 21.1.1."
-                type: array
-                items:
-                    type: string
     HdrMatch:
         type: object
         required:
@@ -540,19 +523,6 @@ definitions:
                 type: string
             value:
                 description: "String value(s) in the host header."
-                type: array
-                items:
-                    type: string
-    HTTPVersionMatch:
-        type: object
-        required:
-            -   match_criteria
-        properties:
-            match_criteria:
-                description: "Criterion to use for HTTP version matching the version used in the HTTP request. Enum options - IS_IN, IS_NOT_IN."
-                type: string
-            versions:
-                description: "HTTP protocol version. Enum options - ZERO_NINE, ONE_ZERO, ONE_ONE, TWO_ZERO. Minimum of 1 items required. Maximum of 8 items allowed. Allowed in Basic(Allowed values- ONE_ZERO,ONE_ONE) edition, Essentials(Allowed values- ONE_ZERO,ONE_ONE) edition, Enterprise edition."
                 type: array
                 items:
                     type: string
@@ -621,65 +591,6 @@ definitions:
             end:
                 description: "Ending IP address of the range."
                 $ref: '#/definitions/IpAddr'
-    IPReputationTypeMatch:
-        type: object
-        required:
-            -   match_operation
-        properties:
-            match_operation:
-                description: "Match criteria. Enum options - IS_IN, IS_NOT_IN. Field introduced in 20.1.1."
-                type: string
-            reputation_types:
-                description: "IP reputation type. Enum options - IP_REPUTATION_TYPE_SPAM_SOURCE, IP_REPUTATION_TYPE_WINDOWS_EXPLOITS, IP_REPUTATION_TYPE_WEB_ATTACKS, IP_REPUTATION_TYPE_BOTNETS, IP_REPUTATION_TYPE_SCANNERS, IP_REPUTATION_TYPE_DOS, IP_REPUTATION_TYPE_REPUTATION, IP_REPUTATION_TYPE_PHISHING, IP_REPUTATION_TYPE_PROXY, IP_REPUTATION_TYPE_NETWORK, IP_REPUTATION_TYPE_CLOUD, IP_REPUTATION_TYPE_MOBILE_THREATS, IP_REPUTATION_TYPE_TOR, IP_REPUTATION_TYPE_ALL. Field introduced in 20.1.1. Minimum of 1 items required."
-                type: array
-                items:
-                    type: string
-    MatchTarget:
-        type: object
-        properties:
-            bot_detection_result:
-                description: "Configure the bot classification result. Field introduced in 21.1.1."
-                $ref: '#/definitions/BotDetectionMatch'
-            client_ip:
-                description: "Configure client ip addresses."
-                $ref: '#/definitions/IpAddrMatch'
-            cookie:
-                description: "Configure HTTP cookie(s)."
-                $ref: '#/definitions/CookieMatch'
-            geo_matches:
-                description: "Configure the geo information. Field introduced in 21.1.1. Maximum of 1 items allowed."
-                type: array
-                items:
-                    $ref: '#/definitions/GeoMatch'
-            hdrs:
-                description: "Configure HTTP header(s)."
-                type: array
-                items:
-                    $ref: '#/definitions/HdrMatch'
-            host_hdr:
-                description: "Configure the host header."
-                $ref: '#/definitions/HostHdrMatch'
-            ip_reputation_type:
-                description: "Configure IP reputation. Field introduced in 20.1.3."
-                $ref: '#/definitions/IPReputationTypeMatch'
-            method:
-                description: "Configure HTTP methods."
-                $ref: '#/definitions/MethodMatch'
-            path:
-                description: "Configure request paths."
-                $ref: '#/definitions/PathMatch'
-            protocol:
-                description: "Configure the type of HTTP protocol."
-                $ref: '#/definitions/ProtocolMatch'
-            query:
-                description: "Configure request query."
-                $ref: '#/definitions/QueryMatch'
-            version:
-                description: "Configure versions of the HTTP protocol."
-                $ref: '#/definitions/HTTPVersionMatch'
-            vs_port:
-                description: "Configure virtual service ports."
-                $ref: '#/definitions/PortMatch'
     MethodMatch:
         type: object
         required:
@@ -708,54 +619,6 @@ definitions:
                 default: "CONTAINS"
             match_str:
                 description: "String values."
-                type: array
-                items:
-                    type: string
-            string_group_refs:
-                description: "UUID of the string group(s). It is a reference to an object of type StringGroup."
-                type: array
-                items:
-                    type: string
-    PortMatch:
-        type: object
-        required:
-            -   match_criteria
-        properties:
-            match_criteria:
-                description: "Criterion to use for port matching the HTTP request. Enum options - IS_IN, IS_NOT_IN."
-                type: string
-            ports:
-                description: "Listening TCP port(s). Allowed values are 1-65535. Minimum of 1 items required."
-                type: array
-                items:
-                    type: integer
-                format: int32
-    ProtocolMatch:
-        type: object
-        required:
-            -   match_criteria
-            -   protocols
-        properties:
-            match_criteria:
-                description: "Criterion to use for protocol matching the HTTP request. Enum options - IS_IN, IS_NOT_IN."
-                type: string
-            protocols:
-                description: "HTTP or HTTPS protocol. Enum options - HTTP, HTTPS."
-                type: string
-    QueryMatch:
-        type: object
-        required:
-            -   match_criteria
-        properties:
-            match_case:
-                description: "Case sensitivity to use for the match. Enum options - SENSITIVE, INSENSITIVE."
-                type: string
-                default: "INSENSITIVE"
-            match_criteria:
-                description: "Criterion to use for matching the query in HTTP request URI. Enum options - QUERY_MATCH_CONTAINS."
-                type: string
-            match_str:
-                description: "String value(s)."
                 type: array
                 items:
                     type: string
